[package]
name = "mac_oui"
version = "0.3.0"
description = "Lookup for MAC Address vendor details"
authors = ["Marirs <marirs@gmail.com>"]
keywords = [
    "eui48", "oui", "mac", "address", "lookup"
]
include = [
    "assets",
    "src"
]
exclude = [
    ".travis.yml",
    ".gitignore",
    "examples"
]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/marirs/mac-oui"
homepage = "https://github.com/marirs/mac-oui"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
csv = "1"
eui48 = "1"
rangemap = "0.1.8"
multimap = "0.8.2"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"

[lib]
name = "mac_oui"
path = "src/lib.rs"

[features]
with-db = []

[badges]
travis-ci = { repository = "marirs/mac-oui" }

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true

[[example]]
name = "mac_lookup"
path= "examples/mac_lookup.rs"
required-features = ["with-db"]

[[example]]
name = "manufacturer_lookup"
path= "examples/manufacturer_lookup.rs"
required-features = ["with-db"]

[[example]]
name = "db_stats"
path= "examples/db_stats.rs"
required-features = ["with-db"]
