[package]
name = "mac_oui"
version = "0.4.11"
description = "Lookup for MAC Address vendor details"
authors = ["Marirs <marirs@gmail.com>"]
keywords = [
    "eui48", "oui", "mac", "address", "lookup"
]
include = [
    "assets",
    "src"
]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/marirs/mac-oui"
homepage = "https://github.com/marirs/mac-oui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
csv = "1"
macaddr = "1"
rangemap = "1"
multimap = "0.10"
serde = { version = "1", features = ["derive"] }

[lib]
name = "mac_oui"
path = "src/lib.rs"

[features]
with-db = []

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "mac_lookup"
path= "examples/mac_lookup.rs"
required-features = ["with-db"]

[[example]]
name = "manufacturer_lookup"
path= "examples/manufacturer_lookup.rs"
required-features = ["with-db"]

[[example]]
name = "db_stats"
path= "examples/db_stats.rs"
required-features = ["with-db"]

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
